@@ -11,14 +11,17 @@ closed_beta_mode: false
 # off of the http headers
 community_locale: "en"
 
-# The label you use for 'staff' writers (featured writer, staff, pro, etc.)
 allow_anonymous_commenting: false
 require_captcha_on_signup: false
 #recaptcha_pub_key: YOUR_PUB_KEY
 #recaptcha_priv_key: YOUR_PRIV_KEY
 # uncomment these keys if you turn captcha on for commenting or signup
 
-# for SEO reasons sometime you should control the robots on how they have to handle your content
+#akismet_key: YOUR_KEY
+#uncomment this if you want to use akismet for comment filtering. Go to http://en.wordpress.com/api-keys/
+
+
+# for SEO reasons sometimes you should control the robots on how they have to handle your content
 # listing of stuff which points to single posts or entries should normally not been indexed, 
 # but the robot should follow the internal link to show the post
 robots_meta_list_content: 'noindex,follow'
