@@ -3,6 +3,7 @@
 =1.2.0
 * Threaded private messages
 * Clear cache link in admin dashboard
+* Add support for using rakismet gem to check comments for spam (see README for instructions)
 
 =1.1.0
 * fixed time_ago formatting problem on user/index
